--- a/blogproject/static/css/nav_bar.css
+++ b/blogproject/static/css/nav_bar.css
@@ -92,7 +92,6 @@ button:hover {
   gap: 20px;
 }
 
-
 .Container1 {
   position: absolute;
   top: 104px;
@@ -104,4 +103,74 @@ button:hover {
   align-items: center;
   justify-content: center;
   color: #ffffff;
+}
+
+/*아래에서부터 미수정 (상단박스) 부분*/
+
+.first-post-box {
+  background-color: #1e1e1e;
+  height: 520px;
+  color: #fff;
+  font-family: 'Pretendard', sans-serif;
+
+}
+
+.first-post-box h3 {
+  font-size: 48px;
+  font-weight: 700;
+  margin: 0;
+}
+
+.first-post-box p {
+  font-weight: 300;
+  margin-bottom: 10px;
+}
+
+.first-post-box .container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 415px;
+}
+
+.first-post-box .container .post-info-box {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  margin-top: -60px;
+  gap: 8px;
+  position: absolute;
+  color: #fff;
+  z-index: 1;
+  height: auto;
+  width: 40%;
+  line-height: 2;
+}
+
+.first-post-box button {
+  background-color: #3a3a3a;
+  color: #f9f8f4;
+  border-radius: 2px;
+  padding: 8px 18px;
+  width: fit-content;
+  font-size: 14px
+}
+
+.first-post-box button:hover {
+  background-color: #474747;
+  transition: transform 0.8s;
+}
+
+.first-post-box .container .thumbnail-img {
+  opacity: 0.3;
+  height: -webkit-fill-available;
+}
+
+.first-post-box .container .thumbnail-img img {
+  object-fit: cover;
+  min-width: 600px;
+  min-height: -webkit-fill-available;
+  width: 100%;
+  height: 100%;
 }
