Add register.html, login.html
회원가입 페이지와 로그인 페이지를 만들었습니다.

Update forms.py, models,py , urls.py, views.py

회원가입 부분 구현했습니다. 로그인은 다시 구현해야 할 것 같습니다.

--- a/blogproject/blogapp/templates/register.html
+++ b/blogproject/blogapp/templates/register.html
@@ -7,7 +7,10 @@
     <title>signup</title>
 </head>
 <body>
-    
+    {% for message in messages %}
+    {{ message.tag }}
+    {{ message }}
+    {% endfor %}
     {% block content %}
     <h2>회원가입</h2>
     <p>비밀번호는 소문자 1개 이상 포함 8 ~ 25자 여야합니다.</p>
