--- a/blogproject/blogapp/templates/login.html
+++ b/blogproject/blogapp/templates/login.html
@@ -1,11 +1,25 @@
 <!-- templates/registration/login.html -->
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="
+        https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css
+        " rel="stylesheet">
+    <title>Document</title>
+</head>
+<body>
+    {% block content %}
+    <h2>로그인</h2>
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">로그인</button>
+    </form>
+    <a href="/register/">회원가입</a>
+    {% endblock %}
+</body>
+</html>
 
-{% block content %}
-<h2>로그인</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">로그인</button>
-</form>
-{% endblock %}
