--- a/blogproject/blogapp/templates/register.html
+++ b/blogproject/blogapp/templates/register.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="
+        https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css
+        " rel="stylesheet">
     <title>signup</title>
 </head>
 <body>
-    {% for message in messages %}
-    {{ message.tag }}
-    {{ message }}
-    {% endfor %}
     {% block content %}
     <h2>회원가입</h2>
     <p>비밀번호는 소문자 1개 이상 포함 8 ~ 25자 여야합니다.</p>
