--- a/blogproject/blogapp/templates/site.html
+++ b/blogproject/blogapp/templates/site.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="
+        https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css
+        " rel="stylesheet">
     <title>블로그 게시물 작성기</title>
 </head>
 <body>
