--- a/blogproject/blogapp/templates/index.html
+++ b/blogproject/blogapp/templates/index.html
@@ -24,15 +24,14 @@
                     <a href="">영화</a>
                     <a href="">IT</a>
                     {% if user.is_authenticated %}
-                        <a href="posting"><button class='PrimaryButton'>글쓰기</button></a>
                         <a href={% url "logout" %}><button class='PrimaryButton'>Logout</button></a>
+                        <a href="posting"><button class='PrimaryButton'>Just Write!</button></a>
                     {% else %}
                         <a href="login"><button class='PrimaryButton'>Login</button></a>
                     {% endif %}
                     
                 </div>
             </div>
-            
         </div>
         <article class="Container1">
             <div class="container">
@@ -53,7 +52,7 @@
         <div class="container">
             {% for post in posts %}
                 <div class="card">
-                    {% comment %} <a href="{% url 'view_post' post.id %}"> {% endcomment %}
+                    <a href='post/{{ post.id }}'>
                         <img src="../static/img/Rectangle 13.png" class='card-thumbnail-img'>
                         <div class="CardInfoBox">
                             <p> {{ post.published_date }}</p>
