--- a/blogproject/blogapp/templates/login.html
+++ b/blogproject/blogapp/templates/login.html
@@ -1,5 +1,5 @@
 <!-- templates/registration/login.html -->
-
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,17 +8,19 @@
     <link href="
         https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css
         " rel="stylesheet">
+    <link rel="stylesheet" href="{% static "css/login.css" %}">
     <title>Document</title>
 </head>
 <body>
     {% block content %}
-    <h2>로그인</h2>
     <form method="post">
+        <h2>로그인</h2>
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">로그인</button>
+        <button type="submit">Login</button>
     </form>
-    <a href="/register/">회원가입</a>
+    
+    {% comment %} <a href="/register/">회원가입</a> {% endcomment %}
     {% endblock %}
 </body>
 </html>
