--- a/blogproject/blogapp/templates/site.html
+++ b/blogproject/blogapp/templates/site.html
@@ -37,43 +37,18 @@
     </header>
     <main>
         <!-- 제목 부분 -->
-        <div>
-            <input type="text" placeholder="제목"></input>
-        </div>
-        <!-- 메인 글 -->
-        <form method="post" enctype="multipart/form-data">
+        <div class = "editor-container">
+            <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
-            {{ form.as_p }}
-        </form>
+            {{form.media}}
+            {{form.as_p}}
+            <br>
+                <button type="submit">제출하기</button>
+            </form>
+        </div>
         
     </main>
-    <aside>
-        <!-- 사이드 -->
-        <div class="sidebox_1">
-            <button>AI 글 자동완성</button>
-        </div>
-        <form action="">
-            <div class="sidebox_2">
-                <p>TOPIC</p>
-                <label><input type="radio", value="일상" name='tag' checked>일상</label>
-                <label><input type="radio", value="요리" name='tag'>요리</label>
-                <label><input type="radio", value="여행" name='tag'>여행</label>
-                <label><input type="radio", value="영화" name='tag'>영화</label>
-                <label><input type="radio", value="IT" name='tag'>IT / 전자기기</label>
-            </div>
-            <div class="sidebox_3">
-                <p>UPLOAD INFO</p>
-                <p>상태 : 미발행</p>
-                <p>이미지 업로드</p>
-                <button>임시저장</button>
-                <button>글 작성</button>
-            </div>
 
-        </form>
-        
-    </aside>
-        
-    
     <footer class="footer">
         <div class="container">
             <p>Made with<span> Django</span></p>
