--- a/blogproject/blogapp/templates/site.html
+++ b/blogproject/blogapp/templates/site.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 {% load static %}
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <link rel="stylesheet" href="{% static "css/navfooter2.css" %}">
-    <link rel="stylesheet" href="{% static "css/site.css" %}">
+
+    <link rel="stylesheet" href="{% static " css/navfooter2.css" %}">
+    <link rel="stylesheet" href="{% static " css/site.css" %}">
     <link href="
         https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css
         " rel="stylesheet">
-    
+
     <title>블로그 게시물 작성</title>
 </head>
 
 <body>
     <header>
         <div class="NavContainer">
-            <div class="NavBar">   
-                <a href="/"><img src="{% static "img/logo(white).svg" %}"></a>
+            <div class="NavBar">
+                <a href="/"><img src="{% static " img/logo(white).svg" %}"></a>
                 <div class='nav-buttons'>
                     <a href="">일상</a>
                     <a href="">요리</a>
@@ -26,10 +27,10 @@
                     <a href="">영화</a>
                     <a href="">IT</a>
                     {% if user.is_authenticated %}
-                        <a href={% url "logout" %}><button class='logout-button'>Logout</button></a>
-                        <a href="posting"><button class='PrimaryButton'>Just Write!</button></a>
+                    <a href={% url "logout" %}><button class='logout-button'>Logout</button></a>
+                    <a href="posting"><button class='PrimaryButton'>Just Write!</button></a>
                     {% else %}
-                        <a href="login"><button class='PrimaryButton'>Login</button></a>
+                    <a href="login"><button class='PrimaryButton'>Login</button></a>
                     {% endif %}
                 </div>
             </div>
@@ -37,16 +38,23 @@
     </header>
     <main>
         <!-- 제목 부분 -->
-        <div class = "editor-container">
+        <div class="editor-container">
             <form method="POST" enctype="multipart/form-data">
-            {% csrf_token %}
-            {{form.media}}
-            {{form.as_p}}
-            <br>
+                {% csrf_token %}
+                {{form.media}}
+                {{form.as_p}}
+                <br>
                 <button type="submit">제출하기</button>
             </form>
         </div>
-        
+        <div class="container">
+            <form method="post" enctype="multipart/form-data">
+                <div class="form-group">
+                    <label for="image">이미지 업로드 : </label>
+                    <input type="file" class="form-control" name="image" id="image">
+                </div>
+            </form>
+        </div>
     </main>
 
     <footer class="footer">
@@ -57,4 +65,5 @@
     </footer>
 
 </body>
+
 </html>
