Update forms.py, models.py, views.py, settings.py Update index.html, site_2.html
index 페이지에서 사진을 불러오게끔 설정했고, 포스트를 누르면 해당 게시글로 이동하게끔 만들었습니다.
site_2 페이지, 즉 글을 보는 페이지에 글을 볼 수 있게 설정했고 추천 글로 이동은 안되지만 글 자체는 보이게끔 만들었습니다.
site_2 html 구조를 일부 바꿨습니다.(재배치)

--- a/blogproject/blogapp/templates/index.html
+++ b/blogproject/blogapp/templates/index.html
@@ -53,7 +53,13 @@
             {% for post in posts %}
                 <div class="card">
                     <a href='post/{{ post.id }}'>
-                        <img src="../static/img/Rectangle 13.png" class='card-thumbnail-img'>
+                        {% if post.image %}
+                            <img src="{{ post.image.url }}" class="card-thumbnail-img">
+                        {% else %}
+                            <div class="default-image" style="width: 100%; height: 100%; background-color: transparent">
+                                <!-- 여기에 기본 이미지나 텍스트를 추가할 수 있습니다. -->
+                            </div>
+                        {% endif %}
                         <div class="CardInfoBox">
                             <p> {{ post.published_date }}</p>
                             <h3>{{ post.title }}</h3>
