--- a/blogproject/blogapp/templates/site_2.html
+++ b/blogproject/blogapp/templates/site_2.html
@@ -17,46 +17,55 @@
     <header>
         <div class="NavBar">
             <div class="NavContainer">
-                <img src="../static/img/Group 1.png">
+                <a href="/"><img src="{% static "img/logo(white).svg" %}"></a>
                 <a href="">일상</a>
                 <a href="">요리</a>
                 <a href="">여행</a>
                 <a href="">영화</a>
                 <a href="">IT</a>
-                <button class='PrimaryButton'>Login</button>
+                {% if user.is_authenticated %}
+                    <a href={% url "logout" %}><button class='logout-button'>Logout</button></a>
+                    <a href="posting"><button class='PrimaryButton'>Just Write!</button></a>
+                {% else %}
+                    <a href="login"><button class='PrimaryButton'>Login</button></a>
+                {% endif %}
             </div>
         </div>
     </header>
     {% block contents %}
     <main>
+        {% comment %} 본문 들어감 {% endcomment %}
         <div class="container">
             <div class="box-divider">
                 <div class="big-box ">
                     <div class="post-info">
-                        <h5>{{ post.published_date }}</h5>
+                        <h5>{{ post.published_date }} | {{ post.view_count }} views</h5>
                         <h1>{{ post.title }}</h1>
-                        <h5>by {{ post.author_id }}</h5>
-                        <div class="topic-box">tag</div>
-                        <div class="post-content">
-                            <p> {{ post.content|safe }}</p>
+                        <h5>by {{ post.author }}</h5>
+                        <h5 class="topic-box">{{ post.topic }}</h5>
                     </div>
-    
+                    <div class="post-content">
+                        {% if post.image %}
+                            <img src="{{ post.image.url }}" width="500" height="400">
+                        {% endif %}
+                        <p style="word-wrap: break-word;"> {{ post.content|safe }}</p>
+                    </div>
                 </div>
-                <div class="small-box">
-                    <div class="another-post-box">
-                        <h3 class="post-name">Other posts
-                            you may like</h3>
-                        <div class="post-box">
-                            <img src="../static/img/Rectangle 13.png" alt="">
-                            <h3>Lorem ipsum dolor</h3>
-                        </div>
-                        <div class="post-box">
-                            <img src="../static/img/Rectangle 13.png" alt="">
-                            <h3>Lorem ipsum dolor</h3>
-                        </div>
+            {% comment %} 추천 글 영역 {% endcomment %}
+            <div class="small-box">
+                <div>
+                  <h3>Other posts</br>you may like</h3>
+                  {% for recommended_post in recommended_posts %}
+                    <div class="recommend-box">
+                      {% comment %} <a href="{% url 'recommended_post_id ' %}"> {% endcomment %}
+                        {{ recommended_post.image_tag|safe }}
+                        {{ recommended_post.title }}</a>
                     </div>
+                  {% endfor %}
                 </div>
             </div>
+        </div>
+
             <div class="button-box">
                 <div>
                     <button class="edit-button">수정하기</button>
@@ -80,6 +89,8 @@
                     <h5>2123.12.11</h5>
                 </div>
             </div>
+            
+            
         </div>
     {% endblock contents %}
     </main>
