Update forms, models, urls, views.py Update index, site_2.css Update index, site, site_2.html
인덱스 페이지 페이지 넘기기 구현, p 태그 안나오게 설정, 100글자까지만 content가 나오도록 설정
ckeditor 글 작성하면 알아서 줄 바꿈 처리하게끔 설정

--- a/blogproject/blogapp/static/css/index.css
+++ b/blogproject/blogapp/static/css/index.css
@@ -92,7 +92,7 @@ body {
 }
 
 .Container1 .container .ThumbnailImg {
-  opacity: 0.8;
+  opacity: 0.3;
   height: -webkit-fill-available;
 }
 
@@ -180,6 +180,10 @@ h3 {
   margin-top : 10px;
   gap: 20px;
   font-size: 15px;
+  white-space: pre-line;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 a {
@@ -238,4 +242,9 @@ span {
 .title {
   text-decoration: none;
   color: inherit;
+}
+
+.pagination {
+  color:#1e1e1e;
+  font-size:20px;
 }
