--- a/blogproject/blogapp/templates/index.html
+++ b/blogproject/blogapp/templates/index.html
@@ -16,7 +16,7 @@
     <header>
         <div class="NavContainer">
             <div class="NavBar">   
-                <a href="/"><img src="../static/img/Group 1.png"></a>
+                <a href="/"><img src="{% static "img/Group 1.png" %}"></a>
                 <div class='nav-buttons'>
                     <a href="">일상</a>
                     <a href="">요리</a>
@@ -34,42 +34,67 @@
             </div>
         </div>
         <article class="Container1">
+            {% autoescape off %}
             <div class="container">
                 <div class="PostInfoBox">
                     <h3 class="Maintitle">{{ representpost.title }}</h3>
-                    <p class="MaintitleSub">{{ representpost.content }}</p>
-                    <a href=""><button class="ReadMoreBtn">READ MORE</button></a>
+                    <p class="MaintitleSub">{{ representpost.content|linebreaksbr|safe|truncatechars:100 }}</p>
+                    <a href="post/{{ representpost.id }}"><button class="ReadMoreBtn">READ MORE</button></a>
                 </div>
                 <div></div>
                 <div class="ThumbnailImg">
-                    <img src="../static/img/Rectangle 8.svg">
+                    {% if representpost.image %}
+                        <img src="{{ representpost.image.url }}">
+                    {% else %}
+                        <img src="{% static "img/기본이미지.jpg" %}">
+                    {% endif %}
+                    
                 </div>
             </div>
+            {% endautoescape %}
         </article>
     </header>
 
     <main>
+        {% autoescape off %}
         <div class="container">
-            {% for post in posts %}
+            {% for post in page_posts %}
                 <div class="card">
                     <a href='post/{{ post.id }}'>
                         {% if post.image %}
                             <img src="{{ post.image.url }}" class="card-thumbnail-img">
                         {% else %}
-                            <div class="default-image" style="width: 100%; height: 100%; background-color: transparent">
-                                <!-- 여기에 기본 이미지나 텍스트를 추가할 수 있습니다. -->
-                            </div>
+                            <img src="{% static "img/기본이미지.jpg" %}" class="card-thumbnail-img">
                         {% endif %}
                         <div class="CardInfoBox">
                             <p> {{ post.published_date }}</p>
                             <h3>{{ post.title }}</h3>
-                            <p class="SubInfo">{{ post.content }}</p>
+                            <p class="SubInfo">{{ post.content|linebreaksbr|safe|truncatechars:100 }}</p>
                         </div>
                     </a>
                 </div>
             {% endfor %}
+            <div class="pagination">
+                <span class="step-links">
+                    {% if page_posts.has_previous %}
+                        <a href="?page=1" style="color: black;">&laquo; first</a>
+                        <a href="?page={{ page_posts.previous_page_number }}" style="color: black;">previous</a>
+                    {% endif %}
+                    {% if page_posts.has_next %}
+                        <a href="?page={{ page_posts.next_page_number }}" style="color: black;">next</a>
+                        <a href="?page={{ page_posts.paginator.num_pages }}" style="color: black;">last &raquo;</a>
+                    {% endif %}
+                </span>
+            </div>
+            <span class="current-page">
+                Page {{ page_posts.number }} of {{ page_posts.paginator.num_pages }}.
+            </span>
+    
         </div>
+        {% endautoescape %}
+        
     </main>
+    
     <footer class="footer">
         <div class="container">
             <p>Made with<span> Django</span></p>
