--- a/blogproject/blogapp/templates/site_2.html
+++ b/blogproject/blogapp/templates/site_2.html
@@ -25,13 +25,14 @@
                 <a href="">IT</a>
                 {% if user.is_authenticated %}
                     <a href={% url "logout" %}><button class='logout-button'>Logout</button></a>
-                    <a href="posting"><button class='PrimaryButton'>Just Write!</button></a>
+                    <a href="/posting/"><button class='PrimaryButton'>Just Write!</button></a>
                 {% else %}
                     <a href="/login"><button class='PrimaryButton'>Login</button></a>
                 {% endif %}
             </div>
         </div>
     </header>
+    
     {% block contents %}
     <main>
         {% comment %} 본문 들어감 {% endcomment %}
@@ -48,7 +49,7 @@
                         {% if post.image %}
                             <img src="{{ post.image.url }}" width="500" height="400">
                         {% endif %}
-                        <p style="word-wrap: break-word;"> {{ post.content|safe }}</p>
+                        <p> {{ post.content|safe }}</p>
                     </div>
                 </div>
             {% comment %} 추천 글 영역 {% endcomment %}
@@ -93,6 +94,7 @@
             
         </div>
     {% endblock contents %}
+    
     </main>
     
     <footer class="footer">
